# Weather-ACAP

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  TROUBLESHOOTING.md  manifest.json
.github/workflows/: build.yml  test.yml
app/: CMakeLists.txt  Makefile  alerts.c  alerts.h  axisevents.c  axisevents.h  condhistory.c  condhistory.h  config_cgi.c  email.c  email.h  history.c  history.h  manifest.json  mqtt.c  mqtt.h  multicam.c  multicam.h  nws.c  openmeteo.c  openmeteo.h  overlay.c  overlay.h  param.conf  params.c  params.h  snapshot.c  snapshot.h  threshold.c  threshold.h  vapix.c  vapix.h  weather_acap.c  weather_api.c  weather_api.h  webhook.c  webhook.h
app/html/: app.js  index.html  style.css
